# Star.P.G.

./: .travis.yml  CMakeLists.txt  FreeType.cpp  FreeType.h  Makefile.win  Readme.md  Readme.txt  Star.P.G  Star.P.G..cbp  Star.P.G..depend  Star.P.G..dev  Star.P.G..layout  Star.P.G._private.h  Star.P.G._private.rc  Star.P.G._private.res  changelog.txt  config.cpp  config.h  credits_license.txt  font.cpp  font.h  game.cpp  game.h  graphics.cpp  graphics.h  levels.cpp  levels.h  main.cpp  main.h  menu.cpp  menu.h  misc.cpp  misc.h  music.cpp  music.h  network.cpp  network.h  physics.cpp  physics.h  savegame.cpp  (+8 more)
.objs/: Star.P.G._private.res
data/configuration/enemies/: enemy_00.txt  enemy_01.txt  enemy_02.txt  enemy_03.txt  enemy_04.txt  enemy_05.txt  enemy_06.txt  enemy_07.txt  enemy_08.txt  enemy_09.txt  enemy_10.txt  enemy_11.txt  enemy_12.txt  enemy_13.txt  enemy_14.txt  enemy_15.txt  enemy_16.txt  enemy_17.txt  enemy_18.txt  enemy_19.txt  enemy_20.txt  enemy_21.txt  enemy_22.txt  enemy_23.txt  enemy_24.txt
data/configuration/languages/: english.txt  japanese.txt  readme.txt
data/configuration/levels/: level_00.txt  level_01.txt  level_02.txt  level_03.txt  level_04.txt  level_05.txt  level_06.txt  level_07.txt  level_08.txt  level_09.txt  level_10.txt  level_11.txt  level_12.txt  level_13.txt  level_14.txt  level_15.txt  level_16.txt  level_17.txt  level_18.txt  level_19.txt  level_20.txt  level_21.txt  level_22.txt  level_23.txt  level_24.txt
data/configuration/particle_systems/: shrapnel_00.txt  shrapnel_01.txt  thruster_000_fire.txt  thruster_000_smoke.txt  thruster_001_fire.txt  thruster_001_smoke.txt  thruster_002_fire.txt  thruster_002_smoke.txt  thruster_003_fire.txt  thruster_003_smoke.txt
data/configuration/projectiles/: projectile_00.txt  projectile_01.txt  projectile_02.txt  projectile_03.txt  projectile_04.txt  projectile_05.txt  projectile_06.txt  projectile_07.txt  projectile_08.txt  projectile_09.txt  projectile_10.txt  projectile_11.txt  projectile_12.txt  projectile_13.txt  projectile_14.txt  projectile_15.txt  projectile_16.txt  projectile_17.txt  projectile_18.txt  projectile_19.txt  projectile_20.txt  projectile_21.txt  projectile_22.txt  projectile_23.txt  projectile_24.txt  projectile_25.txt  projectile_26.txt  projectile_27.txt  projectile_28.txt  projectile_29.txt  projectile_30.txt  projectile_31.txt  projectile_32.txt  projectile_33.txt  projectile_34.txt
data/configuration/shields/: shield_00.txt  shield_01.txt  shield_02.txt  shield_03.txt  shield_04.txt
data/configuration/thrusters/: thruster_00.txt  thruster_01.txt  thruster_02.txt  thruster_03.txt
data/music/: 00-05.s3m (virt.vgmix.com).nfo  _level_00 - level_05.txt  _level_06 - level_07, menu_00.txt  _level_08 - level_11.txt  _level_12 - level_25,level_nl,level_pd.txt  _outro_00.txt  level_00.S3M  level_01.S3M  level_02.S3M  level_03.S3M  level_04.S3M  level_05.S3M  level_06.s3m  level_07.it  level_08.it  level_09.it  level_10.it  level_11.it  level_12.mod  level_13.mod  level_14.mod  level_15.mod  level_18.mod  level_19.mod  level_20.mod  level_21.mod  level_22.mod  level_23.mod  level_25.mod  level_nl.mod  level_pd.mod  outro_00.mod
data/particle_systems/: thruster_000_fire.txt  thruster_000_smoke.txt
data/textures/explosions/explosion_02/: Thumbs.db
src/: FreeType.cpp  FreeType.h  NPC.cpp  NPC.hpp  PC.cpp  PC.hpp  Star.P.G._private.h  Star.P.G._private.rc  achievements.cpp  achievements.hpp  background.cpp  background.hpp  bullets.cpp  bullets.hpp  config.cpp  config.h  config.hpp  debris.cpp  debris.hpp  explosions.cpp  explosions.hpp  font.cpp  font.h  font.hpp  game.cpp  game.h  game.hpp  graphics.cpp  graphics.h  graphics.hpp  in_game_messages.cpp  in_game_messages.hpp  io.cpp  language.cpp  language.hpp  levels.cpp  levels.h  levels.hpp  load_resources.cpp  load_resources.hpp  (+51 more)
src/RAGE/: Readme.txt  background.cpp  background.hpp  config.cpp  config.hpp  font.cpp  font.hpp  graphics.cpp  graphics.hpp  io.cpp  io.hpp  log.cpp  log.hpp  menu.cpp  menu.hpp  music.cpp  music.hpp  network.cpp  network.hpp  physics.cpp  physics.hpp  rage.cpp  rage.hpp  savegame.cpp  savegame.hpp  sound.cpp  sound.hpp  textures.cpp  textures.hpp  timer.cpp  timer.hpp
src/core/: background.cpp  background.hpp  config.cpp  config.hpp  core.cpp  core.hpp  font.cpp  font.hpp  graphics.cpp  graphics.hpp  io.cpp  io.hpp  log.cpp  log.hpp  menu.cpp  menu.hpp  music.cpp  music.hpp  network.cpp  network.hpp  particles.cpp  particles.hpp  physics.cpp  physics.hpp  savegame.cpp  savegame.hpp  sound.cpp  sound.hpp  textures.cpp  textures.hpp  timer.cpp  timer.hpp
